--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ authors = ["Svend Tofte <stofte@gmail.com>"]
 [dependencies]
 git2 = "0.7.5"
 termion = "1.5.1"
-numtoa = { version = "0.1.0", features = ["std"]}
+rusqlite = "0.14.0"
