--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,15 @@
 image: Visual Studio 2017
 
 install:
-  - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
+#  - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
 #  - rustup-init -yv
   - set PATH=%PATH%;%USERPROFILE%\.cargo\bin
   - set PATH=%PATH%;C:\Qt\5.11.1\msvc2017_64\bin
-  - cd C:\Qt\5.11.1\msvc2017_64
+  - cd \Qt
+  - dir
+  - cd 5.11.1
+  - dir
+  - cd msvc2017_64
   - dir
   - cd bin
   - dir
