--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,18 +1,10 @@
 image: Visual Studio 2017
 
 install:
-#  - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
-#  - rustup-init -yv
+  - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
+  - rustup-init -yv
   - set PATH=%PATH%;%USERPROFILE%\.cargo\bin
-  - set PATH=%PATH%;C:\Qt\5.11.1\msvc2017_64\bin
-  - cd \Qt
-  - dir
-  - cd 5.11.1
-  - dir
-  - cd msvc2017_64
-  - dir
-  - cd bin
-  - dir
+  - set PATH=%PATH%;C:\Qt\5.11.2\msvc2017_64\bin
   - qmake --version
   - rustc --version
   - cargo --version
