--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,17 +2,21 @@ image: Visual Studio 2017
 
 install:
   - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
-  - rustup-init -yv
+  - rustup-init -y
   - set PATH=%PATH%;%USERPROFILE%\.cargo\bin
   - set PATH=%PATH%;C:\Qt\5.11.2\msvc2017_64\bin
   - qmake --version
   - rustc --version
   - cargo --version
+  - cl
+  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Auxiliary\Build\vcvarsall.bat" x64
+  - cl
 
 build_script:
   - qmake -config release app
   - nmake
 
+# rustup takes minutes to install
 cache:
   - '%USERPROFILE%\.cargo -> appveyor.yml'
   - '%USERPROFILE%\.rustup -> appveyor.yml'
