--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ install:
 build_script:
   - qmake -config release app
   - nmake
-  - windeployqt --qmldir app app\release\bin\app.exe
+  - windeployqt --qmldir app bin\app.exe
 
 # rustup takes minutes to install
 cache:
