--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Svend Tofte <stofte@gmail.com>"]
 
 [dependencies]
 libc = "*"
+git2 = "0.7.5"
 
 [dependencies.rusqlite]
 version = "0.15.0"
