--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Svend Tofte <stofte@gmail.com>"]
 [dependencies]
 libc = "*"
 git2 = "0.7.5"
+url = "*"
 
 [dependencies.rusqlite]
 version = "0.15.0"
