--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 authors = ["Svend Tofte <stofte@gmail.com>"]
 
 [dependencies]
-libc = "*"
+libc = "0.2.44"
 git2 = "0.7.5"
-url = "*"
+url = "1.7.2"
+chrono = "0.4.6"
 
 [dependencies.rusqlite]
 version = "0.15.0"
