--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -8,6 +8,7 @@ libc = "0.2.44"
 git2 = "0.7.5"
 url = "1.7.2"
 chrono = "0.4.6"
+chrono-humanize = "0.0.11"
 
 [dependencies.rusqlite]
 version = "0.15.0"
