--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ image: Visual Studio 2017
 
 install:
   - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
-  - ps: Measure-Command { .\rustup-init -y }
+  - rustup-init -y
   - set PATH=%PATH%;%USERPROFILE%\.cargo\bin
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat" x64
   - set PATH=%PATH%;C:\Qt\5.11.2\msvc2017_64\bin
@@ -18,12 +18,6 @@ build_script:
   - windeployqt --verbose 0 --qmldir app bin\gitbumr.exe
   - move bin gitbumr
   - cd gitbumr & 7z a ..\app.zip .
-  - cd %USERPROFILE%\.rustup\toolchains\stable-x86_64-pc-windows-msvc\share
-  - 7z a share.zip
-  - mkdir C:\temp
-  - move share.zip \temp\share.zip
-  - cd \temp
-  - ps: Measure-Command { 7z x share.zip }
 
 test: off
 
