--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -9,6 +9,7 @@ git2 = "0.7.5"
 url = "1.7.2"
 chrono = "0.4.6"
 chrono-humanize = "0.0.11"
+crossbeam = "0.5"
 
 [dependencies.rusqlite]
 version = "0.15.0"
