--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
-name = "lib"
+name = "rust"
 version = "0.1.0"
 authors = ["Svend Tofte <stofte@gmail.com>"]
 
 [dependencies]
-libc = "0.2.44"
-git2 = "0.7.5"
+libc = "0.2.49"
+git2 = "0.8.0"
 url = "1.7.2"
 chrono = "0.4.6"
 chrono-humanize = "0.0.11"
-crossbeam = "0.5"
+crossbeam = "0.7.1"
 
 [dependencies.rusqlite]
-version = "0.15.0"
+version = "0.16.0"
 features = ["bundled"]
 
 [lib]
