--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ install:
   - rustup-init -y
   - set PATH=%PATH%;%USERPROFILE%\.cargo\bin
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat" x64
-  - set PATH=%PATH%;C:\Qt\5.11.3\msvc2017_64\bin
+  - set PATH=%PATH%;C:\Qt\5.12.1\msvc2017_64\bin
   - rustc --version
   - cargo --version
   - qmake --version
@@ -18,6 +18,7 @@ build_script:
 test_script:
   - set TST_GIT_PATH=%APPVEYOR_BUILD_FOLDER%
   - set QML2_IMPORT_PATH=%APPVEYOR_BUILD_FOLDER%\lib\release
+  - echo %QML2_IMPORT_PATH%
   - nmake check
 
 after_test:
