--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,12 +18,12 @@ build_script:
 
 test_script:
   - set TST_GIT_PATH=%APPVEYOR_BUILD_FOLDER%
-  - set QML2_IMPORT_PATH=%APPVEYOR_BUILD_FOLDER%\lib\release
+  - set QML2_IMPORT_PATH=%APPVEYOR_BUILD_FOLDER%\build\lib\release
   - nmake check
 
 after_test:
   - move app\bin gitbumr
-  - windeployqt --verbose 0 --qmldir app gitbumr\gitbumr.exe
+  - windeployqt --verbose 0 --qmldir %APPVEYOR_BUILD_FOLDER%\app gitbumr\gitbumr.exe
   - cd gitbumr & 7z a ..\app.zip .
 
 artifacts:
