--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,7 @@ build_script:
   - nmake
 
 test_script:
+  - set RUST_BACKTRACE=1
   - set TST_GIT_PATH=%APPVEYOR_BUILD_FOLDER%
   - set QML2_IMPORT_PATH=%APPVEYOR_BUILD_FOLDER%\build\lib\release
   - nmake check
