--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,7 @@ test_script:
 # package
 after_test:
   - move app\bin gitbumr
+  - xcopy "%QML2_IMPORT_PATH%\RustCode" gitbumr\RustCode /I
   - windeployqt --verbose 0 --qmldir %APPVEYOR_BUILD_FOLDER%\app gitbumr\gitbumr.exe
   - pushd gitbumr & 7z a ..\..\app.zip . & popd
 
