Fix copy path after rename

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ test_script:
 # package
 after_test:
   - move app\bin gitbumr
-  - xcopy "%QML2_IMPORT_PATH%\RustCode" gitbumr\RustCode /I
+  - xcopy "%QML2_IMPORT_PATH%\GitbumrComponents" gitbumr\GitbumrComponents /I
   - del /s /q *.lib *.exp
   - windeployqt --verbose 0 --qmldir %APPVEYOR_BUILD_FOLDER%\app gitbumr\gitbumr.exe
   - pushd gitbumr & 7z a ..\..\app.zip . & popd
