--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 image:
   - Ubuntu
-  - Visual Studio 2019
+  - Visual Studio 2017
 
 environment:
   RUST_BACKTRACE: full
@@ -8,7 +8,7 @@ environment:
   QT_LINUX_URL: https://download.qt.io/official_releases/online_installers/qt-unified-linux-x64-online.run
   QT_DEPLOY_BIN: linuxdeployqt-6-x86_64.AppImage
   QT_DEPLOY_URL: https://github.com/probonopd/linuxdeployqt/releases/download/6/linuxdeployqt-6-x86_64.AppImage
-  UBUNTU_PKGS: libgl1-mesa-glx libx11-xcb1 libxkbcommon-x11-dev libfontconfig build-essential libxrender1 libssl-dev pkg-config libgl1-mesa-dev libegl1-mesa-lts-xenial libcurl3-dev
+  UBUNTU_PKGS: libgl1-mesa-glx libx11-xcb1 libxkbcommon-x11-dev libfontconfig build-essential libxrender1 libssl-dev pkg-config libgl1-mesa-dev libegl1-mesa-dev-lts-xenial libcurl3-dev
 
 install:
   - cmd: set TST_GIT_PATH=%APPVEYOR_BUILD_FOLDER%
@@ -18,7 +18,7 @@ install:
   - cmd: rustup-init.exe -y
   - cmd: call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat" x64
   - cmd: set PATH=%PATH%;%USERPROFILE%\.cargo\bin
-  - cmd: set PATH=%PATH%;C:\Qt\5.12.5\msvc2017_64\bin
+  - cmd: set PATH=%PATH%;C:\Qt\5.13.2\msvc2017_64\bin
   - sh: curl https://sh.rustup.rs -sSf | sh -s -- -y
   - sh: sudo apt-get update -qq -y
   - sh: sudo apt-get install -qq -y $UBUNTU_PKGS
